--- a/partials/header.html
+++ b/partials/header.html
@@ -12,7 +12,7 @@
         <li><a href="#about-us" id="nav-about">ABOUT US</a></li>
         <li><a href="#our-products" id="nav-products">OUR PRODUCTS</a></li>
         <li><a href="#our-team" id="nav-team">OUR TEAM</a></li>
-        <li><a href="#contact-us" id="nav-contact">CONTACT US</a></li>
+        <!-- <li><a href="#contact-us" id="nav-contact">CONTACT US</a></li> -->
       </ul>
     </nav>
   </div>
