--- a/partials/header.html
+++ b/partials/header.html
@@ -1,11 +1,11 @@
 <header class="site-header" id="mainHeader">
   <div class="container header-row">
-    <a class="brand" href="index.html">
+    <a class="brand" href="#home">
       <img src="assets/images/logo.png" alt="Bioenergy Arabia logo" />
     </a>
     <nav aria-label="Primary">
       <ul class="menu">
-        <li><a href="index.html" id="nav-home">HOME</a></li>
+        <li><a href="#home" id="nav-home">HOME</a></li>
         <li><a href="#about-us" id="nav-about">ABOUT US</a></li>
         <li><a href="#our-products" id="nav-products">OUR PRODUCTS</a></li>
         <li><a href="#our-team" id="nav-team">OUR TEAM</a></li>
