--- a/partials/header.html
+++ b/partials/header.html
@@ -7,7 +7,7 @@
       <ul class="menu">
         <li><a href="#home" id="nav-home">HOME</a></li>
         <li><a href="#about-us" id="nav-about">ABOUT US</a></li>
-        <li><a href="#our-products" id="nav-products">OUR PRODUCTS</a></li>
+        <li><a href="#our-products" id="nav-products">PRODUCTS AND SERVICES</a></li>
         <li><a href="#our-team" id="nav-team">OUR TEAM</a></li>
       </ul>
     </nav>
